@@ -12,6 +12,7 @@ import uz.pdp.fastfoodapp.template.ApiResult;
 import uz.pdp.fastfoodapp.template.ErrorData;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 @RestControllerAdvice
@@ -23,7 +24,7 @@ public class ExceptionHelper {
     public ResponseEntity<?> exceptionHandler(RestException e) {
         return ResponseEntity
                 .status(e.getStatus())
-                .body(new ApiResult<>(false, List.of(new ErrorData(e.getMessage(), e.getStatus().value()))));
+                .body(new ApiResult<>(false, Arrays.asList(new ErrorData(e.getMessage(), e.getStatus().value()))));
     }
 
     @ExceptionHandler(value = {MethodArgumentNotValidException.class})
